# mlir-toy

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md
include/toy/: Toy.td  ToyDialect.td  ToyOps.td
